tempo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo
  namespace: catalystlab-shared
  labels:
    app: tempo
spec:
  selector:
    app: tempo
  ports:
    - name: http
      port: 3200
      targetPort: 3200
      protocol: TCP
    - name: grpc
      port: 9096
      targetPort: 9096
      protocol: TCP
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
    - name: otlp-http
      port: 4318
      targetPort: 4318
      protocol: TCP
    - name: grpc-internal
      port: 9095
      targetPort: 9095
      protocol: TCP
  type: ClusterIP
